--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@ericblade/quagga2": "^1.8.4",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.5",
-    "bootstrap-icons": "^1.11.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "aos": "^2.3.4",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^11.0.5",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,15 +55,17 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/testing-library__react": "^10.0.1",
     "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
-    "ts-jest": "^29.3.2"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^4.9.0"
   }
 }
